syntax = "proto3";
package rpc_pb;
 
import "user_common.proto";
service Menu {
  rpc List  (PagerReq)  returns  (PagerResp) {};
  rpc Add 	(Req)  returns  (Resp) {};
  rpc Del 	(Req)  returns  (Resp) {};
  rpc Update (Req)  returns (Resp) {};
  rpc GetAllMenu  (PagerReq)  returns  (PagerResp) {};
  rpc GetUserMenu  (PagerReq)  returns  (PagerResp) {};
  rpc GetUserAction  (PagerReq)  returns  (PagerResp) {};
  rpc GetMenu  (PagerReq)  returns  (PagerResp) {};
  rpc AddMenu 	(Req)  returns  (Resp) {};
  rpc DelMenu 	(Req)  returns  (Resp) {};
  rpc EditMenu (Req)  returns (Resp) {};
  rpc StartStopMenu (Req)  returns (Resp) {};
  rpc GetMenuWithAuth  (PagerReq)  returns  (PagerResp) {};
  rpc SortMenu (Req)  returns (Resp) {};
}
 